[gd_scene load_steps=2 format=3 uid="uid://c3fbkw26y8tbw"]

[ext_resource type="Script" uid="uid://chr1ytkk2103a" path="res://UI/Pause_Menu/PauseMenu.gd" id="1_nnlwg"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -958.0
offset_top = -384.0
offset_right = -958.0
offset_bottom = -384.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nnlwg")

[node name="Menus" type="Control" parent="."]
anchors_preset = 0
offset_left = -859.0
offset_top = 570.0
offset_right = -819.0
offset_bottom = 610.0

[node name="MainPauseMenu" type="Control" parent="Menus"]
anchors_preset = 0
offset_left = 859.0
offset_top = -570.0
offset_right = 899.0
offset_bottom = -530.0

[node name="Resume" type="Button" parent="Menus/MainPauseMenu"]
process_priority = 1
z_index = 420
layout_mode = 0
offset_left = 256.0
offset_top = -100.0
offset_right = 1733.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Resume"

[node name="Options" type="Button" parent="Menus/MainPauseMenu"]
process_priority = 1
z_index = 420
layout_mode = 0
offset_left = 256.0
offset_top = 200.0
offset_right = 1718.0
offset_bottom = 457.0
theme_override_font_sizes/font_size = 100
text = "Options"

[node name="QuitGame" type="Button" parent="Menus/MainPauseMenu"]
process_priority = 2
z_index = 420
layout_mode = 0
offset_left = 248.0
offset_top = 500.0
offset_right = 1736.0
offset_bottom = 732.0
theme_override_font_sizes/font_size = 100
text = "Quit Game"

[node name="OptionsMenu" type="Control" parent="Menus"]
anchors_preset = 0
offset_left = 859.0
offset_top = -570.0
offset_right = 899.0
offset_bottom = -530.0

[node name="Back" type="Button" parent="Menus/OptionsMenu"]
layout_mode = 0
offset_left = 256.0
offset_top = -100.0
offset_right = 1733.0
offset_bottom = 164.0
theme_override_font_sizes/font_size = 100
text = "Back"

[node name="SoundSettings" type="Button" parent="Menus/OptionsMenu"]
layout_mode = 0
offset_left = 256.0
offset_top = 200.0
offset_right = 1733.0
offset_bottom = 464.0
theme_override_font_sizes/font_size = 100
text = "~Sound Settings"

[node name="VideoSettings" type="Button" parent="Menus/OptionsMenu"]
layout_mode = 0
offset_left = 256.0
offset_top = 500.0
offset_right = 1733.0
offset_bottom = 764.0
theme_override_font_sizes/font_size = 100
text = "~Video Settings"

[node name="Controls" type="Button" parent="Menus/OptionsMenu"]
layout_mode = 0
offset_left = 256.0
offset_top = 800.0
offset_right = 1733.0
offset_bottom = 1064.0
theme_override_font_sizes/font_size = 100
text = "~Controls"

[node name="Debug" type="Button" parent="Menus/OptionsMenu"]
layout_mode = 0
offset_left = 256.0
offset_top = 1100.0
offset_right = 1733.0
offset_bottom = 1364.0
theme_override_font_sizes/font_size = 100
text = "Debug"

[node name="DebugText" type="TextEdit" parent="."]
layout_mode = 0
offset_left = -993.0
offset_top = 990.0
offset_right = -51.0
offset_bottom = 1769.0
theme_override_font_sizes/font_size = 100
editable = false

[node name="DebugUpdateTimer" type="Timer" parent="DebugText"]
wait_time = 0.1

[connection signal="pressed" from="Menus/MainPauseMenu/Resume" to="." method="resume"]
[connection signal="pressed" from="Menus/MainPauseMenu/Options" to="." method="options"]
[connection signal="pressed" from="Menus/MainPauseMenu/QuitGame" to="." method="quitGame"]
[connection signal="pressed" from="Menus/OptionsMenu/Back" to="." method="back"]
[connection signal="pressed" from="Menus/OptionsMenu/SoundSettings" to="." method="soundSettings"]
[connection signal="pressed" from="Menus/OptionsMenu/VideoSettings" to="." method="videoSettings"]
[connection signal="pressed" from="Menus/OptionsMenu/Controls" to="." method="controls"]
[connection signal="pressed" from="Menus/OptionsMenu/Debug" to="." method="debug"]
[connection signal="timeout" from="DebugText/DebugUpdateTimer" to="." method="updateDebug"]
